// Code generated by sqlc. DO NOT EDIT.
// versions:
//   sqlc v1.25.0

package sqlc

import (
	"database/sql"
	"encoding/json"
	"time"
)

type Menu struct {
	ID           string       `db:"id" json:"id"`
	RestaurantID string       `db:"restaurant_id" json:"restaurant_id"`
	Name         string       `db:"name" json:"name"`
	IsActive     sql.NullBool `db:"is_active" json:"is_active"`
	CreatedAt    sql.NullTime `db:"created_at" json:"created_at"`
	UpdatedAt    sql.NullTime `db:"updated_at" json:"updated_at"`
}

type MenuItem struct {
	ID            string         `db:"id" json:"id"`
	MenuID        string         `db:"menu_id" json:"menu_id"`
	Name          string         `db:"name" json:"name"`
	Description   sql.NullString `db:"description" json:"description"`
	PriceAmount   float64        `db:"price_amount" json:"price_amount"`
	PriceCurrency string         `db:"price_currency" json:"price_currency"`
	Category      string         `db:"category" json:"category"`
	IsAvailable   sql.NullBool   `db:"is_available" json:"is_available"`
	CreatedAt     sql.NullTime   `db:"created_at" json:"created_at"`
	UpdatedAt     sql.NullTime   `db:"updated_at" json:"updated_at"`
}

type OutboxMessage struct {
	ID            string          `db:"id" json:"id"`
	AggregateType string          `db:"aggregate_type" json:"aggregate_type"`
	AggregateID   string          `db:"aggregate_id" json:"aggregate_id"`
	EventType     string          `db:"event_type" json:"event_type"`
	Payload       json.RawMessage `db:"payload" json:"payload"`
	CorrelationID string          `db:"correlation_id" json:"correlation_id"`
	CreatedAt     time.Time       `db:"created_at" json:"created_at"`
	PublishedAt   sql.NullTime    `db:"published_at" json:"published_at"`
}

type Restaurant struct {
	ID             string          `db:"id" json:"id"`
	Name           string          `db:"name" json:"name"`
	Street         string          `db:"street" json:"street"`
	City           string          `db:"city" json:"city"`
	ZipCode        string          `db:"zip_code" json:"zip_code"`
	OperatingHours json.RawMessage `db:"operating_hours" json:"operating_hours"`
	CreatedAt      sql.NullTime    `db:"created_at" json:"created_at"`
	UpdatedAt      sql.NullTime    `db:"updated_at" json:"updated_at"`
}

type Ticket struct {
	ID           string         `db:"id" json:"id"`
	OrderID      string         `db:"order_id" json:"order_id"`
	RestaurantID string         `db:"restaurant_id" json:"restaurant_id"`
	Status       string         `db:"status" json:"status"`
	RejectReason sql.NullString `db:"reject_reason" json:"reject_reason"`
	CreatedAt    sql.NullTime   `db:"created_at" json:"created_at"`
	UpdatedAt    sql.NullTime   `db:"updated_at" json:"updated_at"`
}

type TicketItem struct {
	ID        int32  `db:"id" json:"id"`
	TicketID  string `db:"ticket_id" json:"ticket_id"`
	ProductID string `db:"product_id" json:"product_id"`
	Name      string `db:"name" json:"name"`
	Quantity  int32  `db:"quantity" json:"quantity"`
}
